# ServiceDeskLLM

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
src/common/: enum.py  schemas.py
src/services/MemoryService/: Dockerfile  alembic.ini
src/services/MemoryService/app/: config.py  crud.py  database.py  main.py  models.py  router.py  schemas.py  utils.py
src/services/MemoryService/app/common/: __init__.py  schemas.py
src/services/MemoryService/app/migrations/: env.py
src/services/MemoryService/app/migrations/versions/: e10f0a51fbdb_.py
src/services/MemoryService/app/utils/: enum.py  logger.py
src/services/TelegramService/: Dockerfile  entrypoint.sh
src/services/TelegramService/app/: config.py  main.py  schemas.py  telegram_bot.py
src/services/TelegramService/app/clients/: memory_service_client.py
src/services/TelegramService/app/common/: enum.py  schemas.py
src/services/TelegramService/app/utils/: logger.py
src/services/common/: enum.py
